feat(observer): enforce comment marker uniqueness on resolved comment\n\nAdd assertMarkerExactlyOnce() + assertResolvedPeriodMarkerExactlyOnce()\nto the green-path GitHub Script step.\n\nBefore posting the resolved comment, validate:\n- drift-ci-mode appears exactly once\n- drift-event appears exactly once\n- drift-resolved-for-period appears exactly once AND its value\n  matches the expected firstDetectedIso (episode identity)\n\nThis prevents posting malformed/duplicated markers in resolved\ncomments, which would break dedupe logic in alreadyResolvedForThisPeriod().\n\nValue validation on drift-resolved-for-period ensures the dedupe key\ncannot be accidentally mismatched against the wrong episode."

--- a/.github/workflows/contract-parity-main-observer.yml
+++ b/.github/workflows/contract-parity-main-observer.yml
@@ -1259,6 +1259,36 @@ jobs:
               }
             }
 
+            // Assert that a marker key occurs exactly once in a text payload.
+            function assertMarkerExactlyOnce(text, key, contextLabel) {
+              const n = countMarkerOccurrences(text, key);
+              if (n !== 1) {
+                throw new Error(
+                  `${contextLabel}: marker '${key}' must appear exactly once (found ${n}).`
+                );
+              }
+            }
+
+            // For drift-resolved-for-period, also validate the value matches expected period.
+            function assertResolvedPeriodMarkerExactlyOnce(text, expectedPeriodIso, contextLabel) {
+              const re = /^\s*<!--\s*drift-resolved-for-period:\s*([^>]+)\s*-->\s*$/gm;
+              const matches = [];
+              let m;
+              while ((m = re.exec(text || "")) !== null) {
+                matches.push((m[1] || "").trim());
+              }
+              if (matches.length !== 1) {
+                throw new Error(
+                  `${contextLabel}: 'drift-resolved-for-period' must appear exactly once (found ${matches.length}).`
+                );
+              }
+              if (matches[0] !== expectedPeriodIso) {
+                throw new Error(
+                  `${contextLabel}: drift-resolved-for-period value mismatch. Expected '${expectedPeriodIso}', got '${matches[0]}'.`
+                );
+              }
+            }
+
             function formatDuration(ms) {
               const totalSec = Math.max(0, Math.floor(ms / 1000));
               const days = Math.floor(totalSec / 86400);
@@ -1516,6 +1546,13 @@ jobs:
               "",
               `_Rolling issue identity: dual-marker (fallback used: ${foundBy})._`
             ]).filter(Boolean).join("\n");
+
+            // Comment marker uniqueness contract (tightest):
+            // prevent posting malformed/duplicated markers.
+            const COMMENT_CTX = "Resolved comment payload";
+            assertMarkerExactlyOnce(comment, "drift-ci-mode", COMMENT_CTX);
+            assertMarkerExactlyOnce(comment, "drift-event", COMMENT_CTX);
+            assertResolvedPeriodMarkerExactlyOnce(comment, firstDetectedIso, COMMENT_CTX);
 
             if (!already) {
               await github.rest.issues.createComment({
